# rta

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/django_reference/clients/: amfi_nav.py  arn_dashboard.py  benchmarks.py  calendar_store.py  cams_scheme_master.py  crm.py  enrich.py  insights_cache.py  nav_history.py  portfolio.py  research.py  research_rules.py  scheme_master.py  urls.py  views.py  wstpr_ingest.py  yield_optimizer.py
examples/django_reference/clients/templates/clients/: arn_dashboard.html  calendar.html  crm_board.html  crm_detail.html  crm_risk.html  detail.html  holding.html  list.html  research.html  research_fund.html  research_rules.html  transactions.html  yield_optimizer.html
examples/django_reference/clients/templatetags/: inr.py
examples/django_reference/dashboard/templates/dashboard/: home.html
examples/django_reference/reference_app/: context.py  ofr_bridge.py  settings.py  urls.py
examples/django_reference/templates/: base.html
examples/django_reference/uploaded_files/: c958b3e7f10c_broken.csv
examples/django_reference/uploads/: urls.py  views.py
examples/django_reference/uploads/templates/uploads/: detail.html  list.html  upload.html
src/openreversefeed/: README.md  settings.py
src/openreversefeed/adapters/: base.py  cams.py  kfintech.py
src/openreversefeed/core/: account_resolver.py  aggregation.py  cache.py  cleaner.py  composite_key.py  conflict.py  dedup.py  fifo.py  models.py  negative_fix.py  pair_removal.py  validator.py
src/openreversefeed/db/alembic/: env.py
tests/unit/: test_account_resolver.py  test_aggregation.py  test_cache.py  test_cams_adapter.py  test_cleaner.py  test_composite_key.py  test_conflict.py  test_dedup.py  test_fifo.py  test_negative_fix.py  test_pair_removal_cams.py  test_pair_removal_kfintech.py  test_settings.py  test_validator.py
tools/: check_forbidden_strings.py  end_to_end_demo.py  generate_aum_report.py  generate_samples.py  inspect_amc_fields.py
