[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openreversefeed"
version = "0.1.0"
description = "Ingest Indian mutual fund registrar (CAMS, KFintech) feed files and produce a clean ledger of transactions and FIFO positions."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "openreversefeed contributors" }]
keywords = ["mutual-funds", "reverse-feed", "cams", "kfintech", "india", "wealth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
]

dependencies = [
    "pandas >=2.1,<3",
    "pyarrow >=15,<20",
    "openpyxl >=3.1,<4",
    "xlrd >=2.0,<3",
    "dbfread >=2.0,<3",
    "SQLAlchemy >=2.0,<2.1",
    "alembic >=1.13,<2",
    "psycopg[binary] >=3.1,<4",
    "pydantic >=2.6,<3",
    "pydantic-settings >=2.2,<3",
    "typer >=0.12,<1",
    "httpx >=0.27,<1",
]

[project.optional-dependencies]
s3 = ["boto3 >=1.34,<2"]
kafka = ["confluent-kafka >=2.3,<3"]
otel = [
    "opentelemetry-api >=1.25",
    "opentelemetry-sdk >=1.25",
    "opentelemetry-instrumentation-sqlalchemy >=0.46b0",
]
dev = [
    "pytest >=8,<9",
    "pytest-cov >=5,<6",
    "hypothesis >=6.100,<7",
    "testcontainers[postgres] >=4,<5",
    "ruff >=0.5,<1",
    "mypy >=1.10,<2",
    "moto[sqs,s3] >=5,<6",
    "dbf >=0.99,<1",
]

[project.scripts]
orf = "openreversefeed.cli:app"

[project.urls]
Homepage = "https://github.com/openreversefeed/openreversefeed"
Issues = "https://github.com/openreversefeed/openreversefeed/issues"
Documentation = "https://github.com/openreversefeed/openreversefeed#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/openreversefeed"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "TID"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: requires Postgres via testcontainers",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
